<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreActivity" >

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:onClick="save"
        android:text="@string/save" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnSave"
        android:layout_alignBottom="@+id/btnSave"
        android:layout_marginRight="16dp"
        android:layout_toLeftOf="@+id/btnSave"
        android:onClick="close"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/txtFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="25dp"
        android:text="@string/fileName" />

    <EditText
        android:id="@+id/edtFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtFileName"
        android:layout_alignBottom="@+id/txtFileName"
        android:layout_alignRight="@+id/btnSave"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/txtWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtFileName"
        android:layout_below="@+id/edtFileName"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="false"
        android:layout_marginTop="30dp"
        android:text="@string/override" />

    <ProgressBar
        android:id="@+id/pbrSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtWarning"
        android:layout_alignTop="@+id/btnCancel"
        android:indeterminate="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtWarning"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/fileNameNonEmpty"
        android:visibility="invisible" />

</RelativeLayout>