<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoadActivity" >

    <Button
        android:id="@+id/btnLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:onClick="load"
        android:text="@string/load" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnLoad"
        android:layout_alignBottom="@+id/btnLoad"
        android:layout_marginRight="18dp"
        android:layout_toLeftOf="@+id/btnLoad"
        android:onClick="close"
        android:text="@string/cancel" />

    <ProgressBar
        android:id="@+id/pbrLoad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/btnCancel"
        android:layout_marginLeft="19dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/txtWarning"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLoad"
        android:layout_alignParentLeft="true"
        android:gravity="center_horizontal|center_vertical"
        android:paddingBottom="@dimen/margin"
        android:text="@string/unsaved" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtWarning"
        android:layout_alignLeft="@+id/txtChooseFile"
        android:layout_alignRight="@+id/btnLoad"
        android:layout_below="@+id/txtChooseFile"
        android:clickable="true" >

    </ListView>

    <TextView
        android:id="@+id/txtChooseFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/pbrLoad"
        android:layout_alignParentTop="true"
        android:layout_marginTop="14dp"
        android:paddingBottom="@dimen/margin"
        android:text="@string/chooseFile" />

    <TextView
        android:id="@+id/txtFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtChooseFile"
        android:layout_alignBottom="@+id/txtChooseFile"
        android:layout_alignLeft="@+id/btnCancel"
        android:layout_alignRight="@android:id/list" />

</RelativeLayout>